# stirlingpdf-agent

./: .bumpversion.cfg  .dockerignore  .env.example  .pre-commit-config.yaml  .vulture_whitelist.py  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  sitemap.xml
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
scripts/: verify_api_integration.py
search/: search_index.json
stirlingpdf_agent/: __init__.py  __main__.py  agent.py  agent_server.py  api_client.py  auth.py  kg_ingest.py  kg_media.py  mcp.py  mcp_config.json  mcp_server.py  stirlingpdf_agent_models.py  stirlingpdf_api.py
stirlingpdf_agent/agent/: CRON.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md
stirlingpdf_agent/agent_data/: A2A_AGENTS.md  IDENTITY.md  MCP_AGENTS.md  MEMORY.md  NODE_AGENTS.md  knowledge_graph.db  mcp_config.json
stirlingpdf_agent/api/: __init__.py  api_client_base.py  api_client_watermark.py
stirlingpdf_agent/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
stirlingpdf_agent/mcp/: __init__.py  mcp_pdf.py
stirlingpdf_agent/ontology/: __init__.py  certification.json  stirlingpdf.ttl
stirlingpdf_agent/ontology/fixtures/: records.json
stirlingpdf_agent/ontology/mappings/: source.yaml
stirlingpdf_agent/ontology/migrations/: manifest.json
stirlingpdf_agent/ontology/shapes/: connector.shacl.ttl
stirlingpdf_agent/prompts/: main_agent.json  pdf_specialist.json
stirlingpdf_agent/skills/stirlingpdf-agent-docs/: SKILL.md  WORKFLOW.md
stirlingpdf_agent/skills/stirlingpdf-agent-docs/reference/: index.md
stirlingpdf_agent/skills/stirlingpdf-agent-operations/: SKILL.md
stirlingpdf_agent/skills/stirlingpdf-agent-operations/agents/: openai.yaml
stirlingpdf_agent/skills/stirlingpdf-agent-operations/references/: catalog.md
stirlingpdf_agent/skills/stirlingpdf-document-operations/: SKILL.md  WORKFLOW.md
stirlingpdf_agent/skills/stirlingpdf-knowledge-graph/: SKILL.md  WORKFLOW.md
stirlingpdf_agent/skills/stirlingpdf-watermarking/: SKILL.md  WORKFLOW.md
tests/: conftest.py  test_action_discovery.py  test_concept_parity.py  test_coverage_enhancement.py  test_init.py  test_kg_ingest.py  test_kg_media.py
usage/: index.html
