[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stirlingpdf-agent"
version = "0.1.14"
description = "Agent package for communicating with Stirling PDF via REST APIs."
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities[mcp]>=0.2.25"]

[project.optional-dependencies]
agent = [
    "agent-utilities[agent,logfire]>=0.2.25"]


all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.25"]

[project.scripts]
stirlingpdf-mcp = "stirlingpdf_agent.mcp_server:mcp_server"
stirlingpdf-agent = "stirlingpdf_agent.agent_server:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
stirlingpdf_agent = [ "mcp_config.json", "agent_data/**", "skills/**"]
