[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "stirlingpdf-agent"
version = "0.1.30"
description = "Agent package for communicating with Stirling PDF via REST APIs."
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.10"
dependencies = [ "agent-utilities[mcp]>=0.2.31",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
agent = [ "agent-utilities[agent,logfire]>=0.2.31",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.2.31",]
test = [ "pytest", "pytest-asyncio",]

[project.scripts]
stirlingpdf-mcp = "stirlingpdf_agent.mcp_server:mcp_server"
stirlingpdf-agent = "stirlingpdf_agent.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
stirlingpdf_agent = [ "mcp_config.json", "agent_data/**", "skills/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
