[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "stirlingpdf-agent"
version = "1.0.1"
description = "Agent package for communicating with Stirling PDF via REST APIs."
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@users.noreply.github.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
agent = [ "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",]
all = [ "agent-utilities[mcp,agent-runtime,logfire]>=1.27.1,<2.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
stirlingpdf-mcp = "stirlingpdf_agent.mcp_server:mcp_server"
stirlingpdf-agent = "stirlingpdf_agent.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
stirlingpdf-agent = "stirlingpdf_agent.skills"

[project.entry-points."agent_utilities.ontology_providers"]
stirlingpdf-agent = "stirlingpdf_agent.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
stirlingpdf-agent = "stirlingpdf_agent.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
stirlingpdf-agent = "stirlingpdf_agent.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
stirlingpdf_agent = [ "mcp_config.json", "agent_data/**", "skills/**", "prompts/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
